k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loveparcel
  labels:
    app.kubernetes.io/managed-by: "kubectl"
